--- a/app/src/main/res/layout/activity_filtro.xml
+++ b/app/src/main/res/layout/activity_filtro.xml
@@ -8,7 +8,7 @@
 
 
     <ImageButton
-        android:id="@+id/BotaoVoltar"
+        android:id="@+id/botaoVoltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
