--- a/app/src/main/res/layout/activity_businesscard.xml
+++ b/app/src/main/res/layout/activity_businesscard.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/background_gradient">
 
     <ImageButton
-        android:id="@+id/BotaoVoltar"
+        android:id="@+id/btVoltar4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
