Feat: Ajustando layout

--- a/app/src/main/res/layout/activity_filtro.xml
+++ b/app/src/main/res/layout/activity_filtro.xml
@@ -12,98 +12,141 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="628dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_revert" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:text="@string/Filtro"
-        android:textSize="30sp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/borda_redonda"
-        android:padding="5sp"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:background="#03224c"
+        android:fontFamily="@font/playfair_display"
+        android:orientation="vertical"
+        android:padding="16dp"
         android:shadowColor="@color/black"
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="20"
+        android:text="Defina seus interesses:"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:letterSpacing="0.15"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
+        android:fontFamily="@font/playfair_display"
         android:id="@+id/checkboxFilme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="200dp"
-        android:textColor="#FFFFFF"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="112dp"
         android:text="Filmes"
-        android:textSize="30sp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
+        android:button="@drawable/checkbox_custom"
+        />
 
     <CheckBox
+        android:fontFamily="@font/playfair_display"
         android:id="@+id/checkboxSerie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="250dp"
-        android:textColor="#FFFFFF"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="168dp"
         android:text="Séries"
-        android:textSize="30sp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
+        android:button="@drawable/checkbox_custom"
+        />
 
     <CheckBox
+        android:fontFamily="@font/playfair_display"
         android:id="@+id/checkboxJogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="300dp"
-        android:textColor="#FFFFFF"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="224dp"
         android:text="Jogos"
-        android:textSize="30sp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
+        android:button="@drawable/checkbox_custom"/>
 
     <CheckBox
+        android:fontFamily="@font/playfair_display"
         android:id="@+id/checkboxMusica"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="350dp"
-        android:textColor="#FFFFFF"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="280dp"
         android:text="Músicas"
-        android:textSize="30sp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
+        android:button="@drawable/checkbox_custom" />
 
     <CheckBox
         android:id="@+id/checkboxAtividade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="400dp"
-        android:textColor="#FFFFFF"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="396dp"
+        android:button="@drawable/checkbox_custom"
+        android:fontFamily="@font/playfair_display"
+        android:padding="10dp"
         android:text="Atividades"
-        android:textSize="30sp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btProximo"
+    <CheckBox
+        android:fontFamily="@font/playfair_display"
+        android:id="@+id/checkboxLivros"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="108dp"
-        android:text="Próximo"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="340dp"
+        android:text="Livros"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
+        android:button="@drawable/checkbox_custom"/>
+
+    <Button
+        android:id="@+id/btProximo"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="164dp"
+        android:backgroundTint="#03224c"
+        android:fontFamily="@font/playfair_display"
+        android:letterSpacing="0.15"
+        android:padding="10dp"
+        android:text="Avançar"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
